# Plane

./: BaseComposite.cpp  BaseComposite.h  BusinessClass.cpp  BusinessClass.h  CMakeLists.txt  EconomyClass.cpp  EconomyClass.h  FirstClass.cpp  FirstClass.h  Passenger.cpp  Passenger.h  Pilot.cpp  Pilot.h  Plane.cpp  Plane.h  Stewardess.cpp  Stewardess.h  i_store_luggage.cpp  i_store_luggage.h  main.cpp
